# lambda_interpreter

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: language_spec.md
examples/: boolean_games.lp  std.lp  tautology.lp  test.lp
examples/std/: arithmetic.lp  boolean.lp  definitions.lp  list.lp  std.lp
src/: main.c
src/core/: core.c  core.h  node.c
src/error/: error.c  error.h
src/runtime/: directives.c  display.c  parser.c  runtime.c  runtime.h  tree.c
src/utils/: array.c  array.h  utils.c  utils.h
tests/: std.lp  test.lp  test2.lp
