cmake_minimum_required(VERSION 3.15)


project(
	lambda_interpreter
	VERSION 0.0.1
	LANGUAGES C
)

set(CMAKE_EXPORT_COMPILE_COMMANDS ON)


set(SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src)
set(SUBMODULES_DIR ${CMAKE_CURRENT_SOURCE_DIR}/submodules)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})

set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Werror")

set(EXEC_NAME lprogi)


file(GLOB_RECURSE SRCS ${SOURCE_DIR}/*.c)

add_executable(${EXEC_NAME} ${SRCS})
